--- a/home-1.html
+++ b/home-1.html
@@ -307,7 +307,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/1.jpg" alt="cover">
+                                                        <img src="img/projects/1.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -315,10 +315,10 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 1</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Interior design studio</h5>
+                                                        <h5>Tittle</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -334,7 +334,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/2.jpg" alt="cover">
+                                                        <img src="img/projects/2.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -342,10 +342,10 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 2</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Home Security Camera</h5>
+                                                        <h5>Tittle</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -361,7 +361,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/3.jpg" alt="cover">
+                                                        <img src="img/projects/3.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -369,10 +369,10 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 3</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Kemia Honest Skincare</h5>
+                                                        <h5>Tittle</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -388,7 +388,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/4.jpg" alt="cover">
+                                                        <img src="img/projects/4.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -396,10 +396,10 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 4</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Cascade of Lava</h5>
+                                                        <h5>Tittle</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -415,7 +415,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/5.jpg" alt="cover">
+                                                        <img src="img/projects/5.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -423,10 +423,10 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 5</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Air Pro by Molekule</h5>
+                                                        <h5>Tittle</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -442,7 +442,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/6.jpg" alt="cover">
+                                                        <img src="img/projects/6.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -450,10 +450,10 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 6</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tony's Chocolonely</h5>
+                                                        <h5>Tittle</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -989,7 +989,7 @@
                                 </div>
                                 <div class="mil-post-descr">
                                     <div class="mil-labels mil-up mil-mb-30">
-                                        <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                        <div class="mil-label mil-upper mil-accent">Project 1</div>
                                         <div class="mil-label mil-upper">may 24 2023</div>
                                     </div>
                                     <h4 class="mil-up mil-mb-30">How to Become a Graphic Designer in 10 Simple Steps
@@ -1016,7 +1016,7 @@
                                 </div>
                                 <div class="mil-post-descr">
                                     <div class="mil-labels mil-up mil-mb-30">
-                                        <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
+                                        <div class="mil-label mil-upper mil-accent">Project 1</div>
                                         <div class="mil-label mil-upper">may 24 2023</div>
                                     </div>
                                     <h4 class="mil-up mil-mb-30">16 Best Graphic Design Online and Offline Courses</h4>
@@ -1172,10 +1172,10 @@
                         <div class="featured-works">
                             <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
-                                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                                    <img src="img/featured/1.jpg" class="featured-work-img" alt="">
                                 </div>
                                 <div class="work-head">
-                                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                                    <h5 class="feature-work-name">Work 1</h5>
                                 </div>
 
                                 <div class="featured-work-tags">
@@ -1185,10 +1185,10 @@
                             </div>
                             <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
-                                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                                    <img src="img/featured/2.jpg" class="featured-work-img" alt="">
                                 </div>
                                 <div class="work-head">
-                                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                                    <h5 class="feature-work-name">Work 2</h5>
                                 </div>
                                 <div class="featured-work-tags">
                                     <span class="featured-work-tag">WEBSITE</span>
