content img fix

--- a/content.html
+++ b/content.html
@@ -287,13 +287,13 @@
 
                 <!-- slider hero -->
                 <div class="sid-hero-slider" data-carousel>
-                    <div class="sid-carousel-cell" style="background-image:url(./img/featured/2.jpg);">
+                    <div class="sid-carousel-cell" style="background-image:url(./img/content_hero/1.jpg);">
                       <div class="sid-overlay"></div>
                     </div>
-                    <div class="sid-carousel-cell" style="background-image:url(./img/projects/2.jpg);">
+                    <div class="sid-carousel-cell" style="background-image:url(./img/content_hero/2.JPG);">
                       <div class="sid-overlay"></div>
                     </div>
-                    <div class="sid-carousel-cell" style="background-image:url(./img/projects/3.jpg);">
+                    <div class="sid-carousel-cell" style="background-image:url(./img/content_hero/3.JPG);">
                       <div class="sid-overlay"></div>
                     </div>
                   </div>
