--- a/home-1.html
+++ b/home-1.html
@@ -196,10 +196,10 @@
         <!-- curtain end -->
 
         <!-- frame -->
-        <div class="mil-frame">
+        <!-- <div class="mil-frame">
             <div class="mil-frame-top">
                 <a href="home-1.html" class="mil-logo"><img class="custlogo" src="img/base/FNF LOGO NEW.png"
-                        alt="fnflogo"></a>
+                        loading="lazy" alt="fnflogo"></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -212,7 +212,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- frame end -->
 
         <!-- content -->
@@ -307,7 +307,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/1.jpg" alt="cover">
+                                                        <img src="img/projects/1.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -334,7 +334,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/2.jpg" alt="cover">
+                                                        <img src="img/projects/2.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -361,7 +361,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/3.jpg" alt="cover">
+                                                        <img src="img/projects/3.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -388,7 +388,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/4.jpg" alt="cover">
+                                                        <img src="img/projects/4.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -415,7 +415,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/5.jpg" alt="cover">
+                                                        <img src="img/projects/5.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -442,7 +442,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/6.jpg" alt="cover">
+                                                        <img src="img/projects/6.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -650,7 +650,7 @@
                                         impactful
                                         work that exceeds expectations.</p>
 
-                                    <div class="mil-up"><a href="#"
+                                    <div class="mil-up"><a href="team.html"
                                             class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a>
                                     </div>
 
@@ -668,7 +668,7 @@
                                         <div class="col-sm-6">
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/1.jpg" alt="Team member">
+                                                <img src="img/faces/1.jpg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna
@@ -690,7 +690,7 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/3.jpg" alt="Team member">
+                                                <img src="img/faces/3.jpg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar
@@ -719,7 +719,7 @@
                                             </p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/2.jpg" alt="Team member">
+                                                <img src="img/faces/2.jpg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma
@@ -741,7 +741,7 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/4.jpg" alt="Team member">
+                                                <img src="img/faces/4.jpg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa
@@ -944,19 +944,19 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 60px;"><img
-                                            src="img/partners/1.svg" alt="logo"></a>
+                                            src="img/partners/1.svg" loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 100px;"><img
-                                            src="img/partners/2.svg" alt="logo"></a>
+                                            src="img/partners/2.svg" loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 60px;"><img
-                                            src="img/partners/1.svg" alt="logo"></a>
+                                            src="img/partners/1.svg" loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 100px;"><img
-                                            src="img/partners/2.svg" alt="logo"></a>
+                                            src="img/partners/2.svg" loading="lazy" alt="logo"></a>
                                 </div>
                             </div>
                         </div>
@@ -1172,7 +1172,7 @@
                         <div class="featured-works">
                             <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
-                                    <img src="img/featured/1.jpg" class="featured-work-img" alt="">
+                                    <img src="img/featured/1.jpg" class="featured-work-img" loading="lazy" alt="">
                                 </div>
                                 <div class="work-head">
                                     <h5 class="feature-work-name">Work 1</h5>
@@ -1185,7 +1185,7 @@
                             </div>
                             <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
-                                    <img src="img/featured/2.jpg" class="featured-work-img" alt="">
+                                    <img src="img/featured/2.jpg" class="featured-work-img" loading="lazy" alt="">
                                 </div>
                                 <div class="work-head">
                                     <h5 class="feature-work-name">Work 2</h5>
@@ -1247,7 +1247,7 @@
                             <section class="Form-teaser">
                                 <div class="teaser-section">
                                     <div class="left-side">
-                                        <img src="img/photo/contact-bg.webp" alt="Teaser Image" class="teaser-image">
+                                        <img src="img/photo/contact-bg.webp" alt="Teaser Image" loading="lazy" class="teaser-image">
                                         <!-- <div class="center-btn">
                                 <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
                                 </div> -->
@@ -1276,7 +1276,7 @@
 
                         <footer class="footer8">
                             <div class="container8">
-                                <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
+                                <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" loading="lazy" alt="">
                                 </div>
                                 <ul class="media-icons8">
                                     <li><a href=""><i class="fab fa-facebook"></i></a></li>
