--- a/team.html
+++ b/team.html
@@ -20,7 +20,9 @@
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Ashley</title>
+    <title>FoodOnFocus</title>
+    <!-- icon -->
+    <link rel="icon" href="img/icons/fof-favicon.jfif" type="image/x-icon">
 
 </head>
 
@@ -52,7 +54,7 @@
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">ashley.com</p>
+                        <p class="mil-h3 mil-muted mil-thin">FoodonFocus</p>
                     </div>
                 </div>
             </div>
@@ -69,7 +71,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="home-1.html" class="mil-logo"><img class="img8" src="img/base/FNF LOGO NEW.png" loading="lazy" alt=""></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -122,66 +124,7 @@
                                     </li>
                                 </ul>
                             </nav>
-
                         </div>
-                        <div class="col-xl-7">
-
-                            <div class="mil-menu-right-frame">
-                                <div class="mil-animation-in">
-                                    <div class="mil-animation-frame">
-                                        <div class="mil-animation mil-position-1 mil-scale" data-value-1="2" data-value-2="2"></div>
-                                    </div>
-                                </div>
-                                <div class="mil-menu-right">
-                                    <div class="row">
-                                        <div class="col-lg-8 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-mb-30">Projects</h6>
-
-                                            <ul class="mil-menu-list">
-                                                <li><a href="project-1.html" class="mil-light-soft">Interior design studio</a></li>
-                                                <li><a href="project-2.html" class="mil-light-soft">Home Security Camera</a></li>
-                                                <li><a href="project-3.html" class="mil-light-soft">Kemia Honest Skincare</a></li>
-                                                <li><a href="project-4.html" class="mil-light-soft">Cascade of Lava</a></li>
-                                                <li><a href="project-5.html" class="mil-light-soft">Air Pro by Molekule</a></li>
-                                                <li><a href="project-6.html" class="mil-light-soft">Tony's Chocolonely</a></li>
-                                            </ul>
-
-                                        </div>
-                                        <div class="col-lg-4 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-mb-30">Useful links</h6>
-
-                                            <ul class="mil-menu-list">
-                                                <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
-                                                <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
-                                            </ul>
-
-                                        </div>
-                                    </div>
-                                    <div class="mil-divider mil-mb-60"></div>
-                                    <div class="row justify-content-between">
-
-                                        <div class="col-lg-4 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California <span class="mil-no-wrap">+51 174 705 812</span></p>
-
-                                        </div>
-                                        <div class="col-lg-4 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-mb-30">Germany</h6>
-
-                                            <p class="mil-light-soft">Leehove 40, 2678 MC De Lier, Netherlands <span class="mil-no-wrap">+31 174 705 811</span></p>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -194,7 +137,7 @@
         <!-- curtain end -->
 
         <!-- frame -->
-        <div class="mil-frame">
+        <!-- <div class="mil-frame">
             <div class="mil-frame-top">
                 <a href="home-1.html" class="mil-logo">A.</a>
                 <div class="mil-menu-btn">
@@ -209,7 +152,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- frame end -->
 
         <!-- content -->
@@ -223,10 +166,10 @@
                             <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="6" data-value-2="1.4"></div>
                         </div>
                         <div class="container">
-                            <ul class="mil-breadcrumbs mil-mb-60">
+                            <!-- <ul class="mil-breadcrumbs mil-mb-60">
                                 <li><a href="home-1.html">Homepage</a></li>
                                 <li><a href="team.html">Team</a></li>
-                            </ul>
+                            </ul> -->
                             <h1 class="mil-mb-60">Meet <span class="mil-thin">Our</span><br> Creative <span class="mil-thin">Team</span></h1>
                             <a href="#team" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Our team</span>
@@ -243,7 +186,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/1.jpg" alt="Team member">
+                                    <img src="img/faces/1.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna Oldman</a></h5>
@@ -262,7 +205,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/3.jpg" alt="Team member">
+                                    <img src="img/faces/3.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar Freeman</a></h5>
@@ -281,7 +224,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/2.jpg" alt="Team member">
+                                    <img src="img/faces/2.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma Newman</a></h5>
@@ -300,7 +243,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/4.jpg" alt="Team member">
+                                    <img src="img/faces/4.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa Trueman</a></h5>
@@ -319,7 +262,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/5.jpg" alt="Team member">
+                                    <img src="img/faces/5.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Tom Oldman</a></h5>
@@ -338,7 +281,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/6.jpg" alt="Team member">
+                                    <img src="img/faces/6.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Corey Trueman</a></h5>
@@ -357,7 +300,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/7.jpg" alt="Team member">
+                                    <img src="img/faces/7.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Justin Newman</a></h5>
@@ -376,7 +319,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/8.jpg" alt="Team member">
+                                    <img src="img/faces/8.jpg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Spunkie</a></h5>
@@ -420,7 +363,7 @@
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Ashley.</div>
+                                    <div class="mil-muted mil-logo mil-up mil-mb-30">FoodOnFocus</div>
 
                                     <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
 
@@ -502,7 +445,7 @@
                                                 <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
                                             </ul>
                                         </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2023 - Mil. All Rights Reserved.</p>
+                                        <p class="mil-light-soft mil-up">© Copyright 2023 - FoodOnFocus All Rights Reserved.</p>
                                     </div>
 
                                 </div>
